--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="../public/assets/icons/camara foto.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/icons/camara foto.svg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TypewriterJS</title>
+  <title>Marcos Alarcon Portfolio</title>
 </head>
 
 <body>
@@ -19,12 +19,11 @@
           <a href="">My proyects</a>
           <a href="">Socials</a>
         </nav>
-        <div>
-          <a href="">ES</a>
-          <a href="">EN</a>
+        <div class="idioma">
+          <button id="es">es</button>
+          <button id="en">en</button>
         </div>
       </div>
-
     </div>
   </header>
   <script type="module" src="scripts/main.js"></script>
