funciona hasta el cambio de idioma

--- a/src/index.html
+++ b/src/index.html
@@ -3,30 +3,39 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="assets/icons/camara foto.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/rrss/camara foto.svg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marcos Alarcon Portfolio</title>
 </head>
 
 <body>
   <header>
-    <div class="hero">
-      <div class="top-bar">
-        <img src="assets/b7a1efc0-d9c4-4d7c-b6df-001ce9d61fbd.webp" alt="logo">
-        <nav>
-          <a href="">About me</a>
-          <a href="">Skills</a>
-          <a href="">My proyects</a>
-          <a href="">Socials</a>
-        </nav>
-        <div class="idioma">
-          <button id="es">es</button>
-          <button id="en">en</button>
-        </div>
+    <section class="top-bar">
+      <img src="assets/b7a1efc0-d9c4-4d7c-b6df-001ce9d61fbd.webp" alt="logo">
+      <nav>
+        <a href="">About me</a>
+        <a href="">Skills</a>
+        <a href="">My proyects</a>
+        <a href="">Socials</a>
+      </nav>
+      <div class="idioma">
+        <button id="es">es</button>
+        <button id="en">en</button>
       </div>
-    </div>
+    </section>
+    <section id="oficio">
+      <div id="prog">
+        <a href="">programmer</a>
+        <div id="iconsprog"></div>
+      </div>
+      <div id="des">
+        <a href="">designer</a>
+        <div id="iconsdes"></div>
+      </div>
+    </section>
   </header>
   <script type="module" src="scripts/main.js"></script>
+  <script type="module" src="scripts/icons.js"></script>
 </body>
 
 </html>
