--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="assets/rrss/camara foto.svg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marcos Alarcon Portfolio</title>
+  <title id="pageTitle">Marcos Alarcon Portfolio</title>
 </head>
 
 <body>
@@ -13,29 +13,28 @@
     <section class="top-bar">
       <img src="assets/b7a1efc0-d9c4-4d7c-b6df-001ce9d61fbd.webp" alt="logo">
       <nav>
-        <a href="">About me</a>
-        <a href="">Skills</a>
-        <a href="">My proyects</a>
-        <a href="">Socials</a>
+        <a href="" id="aboutMe">About me</a>
+        <a href="" id="skills">Skills</a>
+        <a href="" id="projects">My projects</a>
+        <a href="" id="socials">Socials</a>
       </nav>
       <div class="idioma">
-        <button id="es">es</button>
-        <button id="en">en</button>
+        <button id="en">es</button>
+        <button id="es">en</button>
       </div>
     </section>
     <section id="oficio">
       <div id="prog">
-        <a href="">programmer</a>
+        <a href="" id="programmerText">programmer</a>
         <div id="iconsprog"></div>
       </div>
       <div id="des">
-        <a href="">designer</a>
+        <a href="" id="designerText">designer</a>
         <div id="iconsdes"></div>
       </div>
     </section>
   </header>
   <script type="module" src="scripts/main.js"></script>
-  <script type="module" src="scripts/icons.js"></script>
 </body>
 
 </html>
