--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
     <section class="top-bar">
       <img src="assets/b7a1efc0-d9c4-4d7c-b6df-001ce9d61fbd.webp" alt="logo">
       <nav>
-        <a href="" id="aboutMe">About me</a>
-        <a href="" id="skills">Skills</a>
-        <a href="" id="projects">My projects</a>
-        <a href="" id="socials">Socials</a>
+        <a href="#aboutme" id="aboutMe">About me</a>
+        <a href="#skill" id="skills">Skills</a>
+        <a href="#proyect" id="projects">My projects</a>
+        <a href="#media" id="socials">Socials</a>
       </nav>
       <div class="idioma">
         <button id="en">es</button>
@@ -34,6 +34,12 @@
       </div>
     </section>
   </header>
+  <main>
+    <section id="aboutme"></section>
+    <section id="skill"></section>
+    <section id="proyect"></section>
+    <section id="media"></section>
+  </main>
   <script type="module" src="scripts/main.js"></script>
 </body>
 
