falta proyectos y reponsive

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <section id="inicio" class="top-bar">
-      <img src="assets/b7a1efc0-d9c4-4d7c-b6df-001ce9d61fbd.webp" alt="logo">
+      <img src="assets/logo.svg" alt="logo" width="75px">
       <nav>
         <a href="#about" id="aboutMe">About me</a>
         <a href="#skill" id="skills">Skills</a>
@@ -51,20 +51,24 @@
             <div class="card1">
               <p id="card1">Tras estudiar Desarrollo Web en
                 el IES Azarquiel y Diseño Gráfico en la Escuela de Artes de Toledo, he
-                adquirido un enfoque multidisciplinar que me permite combinar la funcionalidad con la creatividad en cada
+                adquirido un enfoque multidisciplinar que me permite combinar la funcionalidad con la creatividad en
+                cada
                 proyecto.
               </p>
             </div>
             <div class="card2">
               <p id="card2">Me apasiona crear soluciones digitales que no solo sean intuitivas, sino también visualmente
-                atractivas. Mi objetivo es construir experiencias de usuario excepcionales y diseños que cuenten historias. 
-                Disfruto de trabajar tanto en la parte técnica del desarrollo web como en el aspecto visual del diseño, buscando siempre
+                atractivas. Mi objetivo es construir experiencias de usuario excepcionales y diseños que cuenten
+                historias.
+                Disfruto de trabajar tanto en la parte técnica del desarrollo web como en el aspecto visual del diseño,
+                buscando siempre
                 un equilibrio perfecto entre ambos.</p>
             </div>
             <div class="card3">
               <p id="card3">
                 A lo largo de mi formación, he trabajado en diversos proyectos donde he mejorado mis habilidades en
-                HTML, CSS, JavaScript y React así como en el uso de herramientas como Photoshop, Illustrator, InDesign y Figma. 
+                HTML, CSS, JavaScript y React así como en el uso de herramientas como Photoshop, Illustrator, InDesign y
+                Figma.
                 Mi enfoque es siempre práctico, buscando soluciones eficientes y personalizadas para cada trabajo.
               </p>
             </div>
