falta libreria y reponsive

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <section id="inicio" class="top-bar">
-      <img src="assets/logo.svg" alt="logo" width="75px">
+      <img src="assets/logo.svg" alt="logo">
       <nav>
         <a href="#about" id="aboutMe">About me</a>
         <a href="#skill" id="skills">Skills</a>
@@ -78,26 +78,61 @@
     </section>
     <section id="skill">
       <div class="portada">
-        <div><a href="#inicio" class="buttonup">up</a></div>
         <h1 id="hab">habilidades</h1>
       </div>
-      <div>
-        <p></p>
+      <div class="centrado">
+        <h1>programación:</h1>
+        <p>html5</p>
+        <p>css3</p>
+        <p>boostrap</p>
+        <p>java</p>
+        <p>javascript/p>
+        <p>node</p>
+        <p>sass</p>
+        <p>react</p>
+      </div>
+      <div class="centrado">
+        <h1>diseño:</h1>
+        <p>Illustrator</p>
+        <p>Photoshop</p>
+        <p>InDesign</p>
+        <p>Premiere</p>
+        <p>figma/p>
       </div>
     </section>
     <section id="proyect">
       <div class="portada">
-        <h1 id="proy">mis proyectos</h1>
         <div><a href="#inicio" class="buttonup">up</a></div>
+        <h1 id="proy">mis proyectos</h1>
       </div>
-      <div>
-        <p></p>
+      <div class="container">
+        <div><p class="title">estos son mis proyectos actuales todos desplegado en github pages</p></div>
+        <div class="container-card">
+          <a href="https://noniqu.github.io/Design-Figma/">
+            <div class="card">
+              <img src="assets/img/figma-1.png" class="card-img-top" alt="figma">
+              <div class="card-body">
+                <h5 class="card-title">inicio de juego de navegador</h5>
+                <p class="card-text">una pequeña prueba de como haría un juego de navagedor</p>
+              </div>
+            </div>  
+          </a>        
+          <a href="https://noniqu.github.io/proyectofinalDAWEC/">
+            <div class="card">
+              <img src="assets/img/pokedex.png" class="card-img-top" alt="pokedex">
+              <div class="card-body">
+                <h5 class="card-title">proyecto pokedex con pokeapi</h5>
+                <p class="card-text">proyecto conjunto en la creacion de una pokedex</p>
+              </div>
+            </div> 
+          </a>         
+        </div>
       </div>
     </section>
     <section id="media">
       <div class="portada">
-        <div><a href="#inicio" class="buttonup">up</a></div>
         <h1 id="soc">redes sociales</h1>
+        <div><a href="#inicio" class="buttonup">up</a></div>
       </div>
       <div class="container">
         <div class="mensaje">
