--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
         <p>css3</p>
         <p>boostrap</p>
         <p>java</p>
-        <p>javascript/p>
+        <p>javascript</p>
         <p>node</p>
         <p>sass</p>
         <p>react</p>
@@ -97,7 +97,7 @@
         <p>Photoshop</p>
         <p>InDesign</p>
         <p>Premiere</p>
-        <p>figma/p>
+        <p>figma</p>
       </div>
     </section>
     <section id="proyect">
@@ -106,14 +106,14 @@
         <h1 id="proy">mis proyectos</h1>
       </div>
       <div class="container">
-        <div><p class="title">estos son mis proyectos actuales todos desplegado en github pages</p></div>
+        <div><p class="title" id="titulo">estos son mis proyectos actuales todos desplegado en github pages</p></div>
         <div class="container-card">
           <a href="https://noniqu.github.io/Design-Figma/">
             <div class="card">
               <img src="assets/img/figma-1.png" class="card-img-top" alt="figma">
               <div class="card-body">
-                <h5 class="card-title">inicio de juego de navegador</h5>
-                <p class="card-text">una pequeña prueba de como haría un juego de navagedor</p>
+                <h5 class="card-title" id="nombreproyecto1">inicio de juego de navegador</h5>
+                <p class="card-text" id="descripcion1">una pequeña prueba de como haría un juego de navagedor</p>
               </div>
             </div>  
           </a>        
@@ -121,8 +121,8 @@
             <div class="card">
               <img src="assets/img/pokedex.png" class="card-img-top" alt="pokedex">
               <div class="card-body">
-                <h5 class="card-title">proyecto pokedex con pokeapi</h5>
-                <p class="card-text">proyecto conjunto en la creacion de una pokedex</p>
+                <h5 class="card-title" id="nombreproyecto2">proyecto pokedex con pokeapi</h5>
+                <p class="card-text" id="descripcion2">proyecto conjunto en la creacion de una pokedex</p>
               </div>
             </div> 
           </a>         
