--- a/src/index.html
+++ b/src/index.html
@@ -142,10 +142,10 @@
           <a href="https://x.com/NoNiQtv_" target="_blank" class="social-icon">
             <img src="assets/rrss/twitter.svg" alt="Twitter">
           </a>
-          <a href="#" target="_blank" class="social-icon">
+          <a href="https://www.instagram.com/" target="_blank" class="social-icon">
             <img src="assets/rrss/instagram-brands-solid.svg" alt="Instagram">
           </a>
-          <a href="#" target="_blank" class="social-icon">
+          <a href="https://es.linkedin.com/" target="_blank" class="social-icon">
             <img src="assets/rrss/linkedn.svg" alt="LinkedIn">
           </a>
           <a href="https://github.com/NoNiQu" target="_blank" class="social-icon">
